# tales_of_survival

./: .buildinfo  .gitignore  .pylintrc  Dockerfile  README.md  genindex.html  index.html  lang_de.yml  lang_en.yml  main.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/generic/: configuration.doctree  (+7 more)
_modules/: index.html
docs/: conf.py
files/: _test.py  _testtest.py  template_character.yml  template_genre.yml
generic/: configuration.html  default_env_var.html  generic_requests.html  index.html  main_schedule.html  module.html  watcher.html  workflow.html
help/: cmd_genre.html  cmds_administration.html  cmds_character.html  cmds_content.html  cmds_game.html  cmds_overview.html  create_content_character.html  create_docu.html  index.html  local_docker.html  local_python.html  start_w_repo.html
src/: __init__.py  character.py  command_workflow.html  configuration.html  configuration.py  constants.html  constants.py  database_architecture.html  db.html  db.py  db_classes.py  db_game.py  db_genre.py  discord_bot.html  discord_bot.py  discord_general.html  discord_permissions.py  discord_utils.html  discord_utils.py  file_utils.html  file_utils.py  game.py  game_handling.html  game_start.html  game_start.py  game_telling.html  game_telling.py  game_views.html  game_views.py  genre.py  index.html  language.py  llm_handler.html  llm_handler.py  template_genre.yml  template_input.yml  test.py  testtest.py  tts_test.py
tests/: test_db_classes.py  test_watcher.py
(+73 files in other folders)
