[project]
name = "tales-of-survival"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "discord-py>=2.6.3",
    "dotenv>=0.9.9",
    "environ-config>=24.1.0",
    "loguru>=0.7.3",
    "myst-parser>=4.0.1",
    "openai>=1.108.1",
    "pydata-sphinx-theme>=0.16.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "sphinx>=8.2.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-mermaid>=0.0.8",
    "sphinx-toolbox>=4.0.0",
    "sqlalchemy[asyncio]>=2.0.43",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
